Added json lib load

--- a/build.gradle
+++ b/build.gradle
@@ -31,3 +31,25 @@ else {
 	throw new GradleException("GHIDRA_INSTALL_DIR is not defined!")
 }
 //----------------------END "DO NOT MODIFY" SECTION-------------------------------
+
+apply plugin: 'base'
+
+repositories {
+    mavenCentral()
+}
+
+configurations {
+    toCopy
+}
+
+dependencies {
+    toCopy 'org.json:json:20200518'      
+    implementation configurations.toCopy    
+}
+
+task copyToLib(type: Copy) {
+    from configurations.toCopy 
+    into 'lib'
+}
+
+processResources.dependsOn copyToLib
