hardcoded version changed to @extversion@

--- a/extension.properties
+++ b/extension.properties
@@ -2,4 +2,4 @@ name=efiSeek
 description=Analyze UEFI firmware, find major struct and functions.
 author=Jokiv
 createdOn=07.04.2020
-version=9.2
+version=@extversion@
