build: Fix build script for Gradle 8.0
This commit replaces use of deprecated Gradle build commands which will
be removed in the next major version update.

Signed-off-by: Akira Moroo <retrage01@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -44,12 +44,12 @@ configurations {
 
 dependencies {
     toCopy 'org.json:json:20200518'      
-    implementation configurations.toCopy    
 }
 
 task copyToLib(type: Copy) {
-    from configurations.toCopy 
-    into 'lib'
+    copy {
+         from configurations.toCopy into 'lib'
+     }
 }
 
-processResources.dependsOn copyToLib
+buildExtension.dependsOn "copyToLib"
